Added tge-extensions to the iOS host

--- a/cmake/host-ios/CMakeLists.txt
+++ b/cmake/host-ios/CMakeLists.txt
@@ -51,6 +51,7 @@ target_link_libraries ( moai
   moai-audiosampler
   moai-core
   zlcore
+  tge-extensions
 )
 
 set_target_properties( moai PROPERTIES
