--- a/cmake/tge-extensions/CMakeLists.txt
+++ b/cmake/tge-extensions/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required ( VERSION 2.8.5 )
 project ( tge-exetnsions )
 
-set ( TGE_EXTENSIONS_INCLUDES "${MOAI_ROOT}/src/;${MOAI_ROOT}/config/;${MOAI_ROOT}/src/config-default/;${MOAI_ROOT}/3rdparty/LuaJIT-2.0.3/src/;${MOAI_ROOT}/3rdparty/tinyxml/" CACHE INTERNAL "doc string" )
+set ( TGE_EXTENSIONS_INCLUDES "${MOAI_ROOT}/src/;${MOAI_ROOT}/config/;${MOAI_ROOT}/src/config-default/;${MOAI_ROOT}/3rdparty/LuaJIT-2.0.3/src/;${MOAI_ROOT}/3rdparty/tinyxml/;${MOAI_ROOT}/3rdparty/expat-2.0.1/lib" CACHE INTERNAL "doc string" )
 
 include_directories ( 
   ${MOAICORE_INCLUDES} 
