adding tge-extensions to android build process

--- a/cmake/host-android/CMakeLists.txt
+++ b/cmake/host-android/CMakeLists.txt
@@ -33,6 +33,7 @@ target_link_libraries ( moai
    log
    GLESv1_CM
    GLESv2
+   tge-extensions
 )
 
 #emulate the android ndk build script to help with debugging
