Adjust targeted device families and Info.plist in cmake file to fit squirrel requirements

--- a/cmake/host-ios/CMakeLists.txt
+++ b/cmake/host-ios/CMakeLists.txt
@@ -82,6 +82,7 @@ set_target_properties( moai PROPERTIES
    XCODE_ATTRIBUTE_INSTALL_PATH "$(LOCAL_APPS_DIR)"
    XCODE_ATTRIBUTE_SKIP_INSTALL "NO"
    XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "5.1"
+   XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "1,2"
    XCODE_ATTRIBUTE_COMBINE_HIDPI_IMAGES "NO"
 )
 
@@ -142,6 +143,6 @@ endif()
 ADD_FRAMEWORKS(moai "${FWORKS}")
 
 set_target_properties(moai PROPERTIES XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "${SIGN_IDENTITY}")
-set_target_properties(moai PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_LIST_DIR}/moai-Info.plist)
+set_target_properties(moai PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_BINARY_DIR}/../Info.plist)
 
  
