--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -111,7 +111,7 @@ if ( BUILD_IOS )
 
   set ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99  -DHAVE_MEMMOVE " )
   #default in ios7 is libc++ but some of our ad support libs are libstdc++ so force the lot to build as libstdc++
-  set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++" )
+  set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++ -ObjC" )
 endif ( BUILD_IOS )
 
 if ( SDL_HOST )
